Update EF Database name.
Updates the EF database name to be EFData.

--- a/TRMDataManager/Web.config
+++ b/TRMDataManager/Web.config
@@ -14,7 +14,7 @@
     <add name="Secrets" userSecretsId="eb64b001-ecb2-477e-af55-abff184091f5" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
   </configBuilders>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TRMDataManager-20210603050216.mdf;Initial Catalog=aspnet-TRMDataManager-20210603050216;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EFData" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\EFData.mdf;Initial Catalog=EFData;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="TRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TRMData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
   <appSettings>
