--- a/TRMDesktopUI/App.config
+++ b/TRMDesktopUI/App.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="api" value="https://localhost:44337/" />
     <add key="taxRate" value="8.75" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <!--<add key="ClientSettingsProvider.ServiceUri" value="" />-->
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
